# machine-learning-bootcamp

./: README.md
module00/ex00/: answers.txt  environment.yml
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex06/: cook_book.py  recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: test.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py
module01/ex04/: eval.py
module01/ex05/: the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module02/ex01/: main.py
module02/ex03/: bad.csv  csvreader.py  player.csv
module02/ex04/: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
module02/ex04/src/my_minipack/: logger.py  progress.py
module02/ex04/tests/: test_package.py
module02/ex05/: TinyStatistician.py
